--- a/src/app/store/storeHeader.component.html
+++ b/src/app/store/storeHeader.component.html
@@ -11,14 +11,14 @@
                 </button>
                 <div>
 
-                    <div class="navbar__sideNav inline-block" ng-click="openSideNav();">
+                    <div class="navbar__sideNav inline-block" >
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </div>
 
                     <div class="navbar-brand-wrap inline-block">
-                        <a class="navbar-brand" ui-sref="home"><img src="../../assets/images/Home/logo.png" alt="logo"
+                        <a class="navbar-brand" routerLink="/store"><img src="../../assets/images/Home/logo.png" alt="logo"
                                 width="130px" class="img-responsive"> </a>
                     </div>
                 </div>
@@ -50,17 +50,20 @@
                     <li ><a><button class="btn header--login " *ngIf="showLoginButton" routerLink="/login">LOGIN</button></a>
                     </li>
                     <li *ngIf="showOptions">
-                        <a href="" class="user-name">hi, firstname <i
+                        <a href="" class="user-name">hi, {{customerData.CustFirstName}} <i
                                 class="fa fa-caret-down"></i></a>
                         <!--<button class=" btn header--logout" ng-click="logout(); " ng-if="userId !='' ">Hi, siddhesh</button>-->
                         <ul class="header-top-right-dropdown list-unstyled">
-                            <li class="text-uppercase"><a>profile</a> </li>
-                            <li class="text-uppercase"><a>manage address</a>
+                            <li class="text-uppercase"><a [routerLink]="['/account']"
+                                [queryParams]="{tab: 'profile'}">profile</a> </li>
+                            <li class="text-uppercase"><a  [routerLink]="['/account']"
+                            [queryParams]="{tab: 'address'}" >manage address</a>
                             </li>
-                            <li class="text-uppercase"><a>order</a> </li>
-                            <li class="text-uppercase"><a >Wishlist</a> </li>
+                            <li class="text-uppercase"><a [routerLink]="['/account']"
+                                [queryParams]="{tab: 'order'}">order</a> </li>
+                            <li class="text-uppercase"><a hyperLink="/account">Wishlist</a> </li>
                             <!-- <li class="text-uppercase"><a href="">forgot password?</a> </li> -->
-                            <li class="text-uppercase"><a >logout</a> </li>
+                            <li class="text-uppercase"><a (click)="logOut()">logout</a> </li>
                         </ul>
                     </li>
                 </ul>
